# mjv

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  noxfile.py  pyproject.toml
.github/workflows/: docs.yml  nox-runs.yml  tests.yml
docs/: api.md  index.md
docs/references/: index.html  mjv_todo_api.html  search.js
docs/references/mjv_todo_api/: app.html
src/mjv/: __main__.py  app.py  database.py  settings.py
src/mjv/apis/: __init__.py  register.py
src/mjv/apis/todo/: models.py  parsers.py  routes.py
src/mjv/apis/user/: models.py  parsers.py  routes.py
src/mjv_todo_api/: __init__.py  __main__.py  app.py  database.py  extensions.py  settings.py
src/mjv_todo_api/apis/: register.py
src/mjv_todo_api/apis/todo/: __init__.py  models.py  routes.py
src/mjv_todo_api/apis/user/: models.py
tests/: __init__.py  app_test.py  conftest.py  database_test.py  main_test.py  test_main.py
tests/apis/: access_test.py  conftest.py
tests/apis/todo/: models_test.py  routes_test.py
tests/apis/user/: __init__.py  models_test.py  routes_test.py
